--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #gameboard {
-	width: 800px;
+	width: 716px;
 	margin: 60px auto;
 }
 
@@ -11,4 +11,8 @@
 	margin: 0;
 	border: 1px solid #000;
 	float: left;
+}
+
+p {
+	display: hidden;
 }
