--- a/main.css
+++ b/main.css
@@ -1,18 +1,75 @@
 #gameboard {
-	width: 716px;
-	margin: 60px auto;
+	background: #f2ed5b;
+	width: 728px;
+	height: 624px;
+	margin: 30px auto;
+	border-top: 15px solid #2c4df3;
+	border-right: 15px solid #2c4df3;
+	border-bottom: 15px solid #2c4df3;
+	border-left: 15px solid #2c4df3;
+}
+
+#results {
+	width: 745px;
+	padding: 0;
+	margin: 0 auto;
+	overflow: hidden;
 }
 
 .cell {
-	background: gray;
+	background: #fff;
 	width: 100px;
 	height: 100px;
+	color: transparent;
 	padding: 0;
 	margin: 0;
-	border: 1px solid #000;
+	border: 2px solid #f6f580;
+	border-radius: 30px;
 	float: left;
 }
 
-p {
-	display: hidden;
+h1 {
+	font-family: serif, sans-serif;
+	font-size: 48px;
+	line-height: 1.4;
+	text-align: center;
+	letter-spacing: 2px;
+	padding: 0;
+	margin: 80px 0 0;
+}
+
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+.button {
+	display: block;
+	background-color: #2c4df3;
+	width: auto;
+	color: #fff;
+	font-size: 16px;
+	line-height: 1;
+	font-weight: 700;
+	letter-spacing: 2px;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 16px 24px;
+	margin: 0 125px 0 0;
+	border-radius: 3px;
+	border: none;
+	cursor: pointer;
+	float: left;
+}
+
+#start-game {
+	background: #db4040;
+}
+
+#results input[type="submit"]:first-of-type {
+	margin: 0 120px 0 10px;
+}
+
+#results input[type="submit"]:last-of-type {
+	margin: 0;
 }
