--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-	display: none;
+	display: block;
 	background-color: #2c4df3;
 	width: auto;
 	color: #fff;
